<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="navigate"
            type="com.example.murmuro.ui.auth.logIn.LogIn" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.auth.logIn.LogIn">



        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <com.google.android.material.circularreveal.CircularRevealLinearLayout
                android:orientation="vertical"
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <com.google.android.material.circularreveal.CircularRevealLinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="110dp"
                    >
                    <View
                        android:layout_width="5dp"
                        android:layout_height="match_parent"
                        android:background="@color/date_time"
                        />
                    <com.google.android.material.circularreveal.CircularRevealLinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        >
                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/welcome"
                            android:textColor="@color/colorPrimaryVariant"
                            android:textSize="25sp"
                            android:textStyle="bold"
                            style="@style/MaterialAlertDialog.MaterialComponents.Title.Panel"
                            />

                        <com.google.android.material.textview.MaterialTextView
                            style="@style/MaterialAlertDialog.MaterialComponents.Title.Panel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/log_in_to_continue"
                            android:textColor="@color/colorPrimaryVariant"
                            android:textSize="20sp"
                            android:layout_marginBottom="5dp"
                            />

                    </com.google.android.material.circularreveal.CircularRevealLinearLayout>
                </com.google.android.material.circularreveal.CircularRevealLinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:errorTextColor="@color/colorError"
                    android:layout_marginTop="50dp"
                    app:boxCornerRadiusBottomEnd="8dp"
                    app:boxCornerRadiusBottomStart="8dp"
                    app:boxCornerRadiusTopEnd="8dp"
                    app:boxCornerRadiusTopStart="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_text"
                    android:textColorHint="@color/icon_in_a_buttom"
                    app:startIconDrawable="@drawable/ic_user"
                    app:startIconTintMode="multiply"
                    app:endIconContentDescription="@string/username"
                    app:helperTextTextColor="@color/date_time"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/username_et"
                        android:textColor="@color/colorPrimary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType= "textCapSentences|textAutoCorrect"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:errorTextColor="@color/colorError"
                    app:hintTextColor="@color/colorPrimary"
                    android:layout_marginTop="20dp"
                    app:boxCornerRadiusBottomEnd="8dp"
                    app:boxCornerRadiusBottomStart="8dp"
                    app:boxCornerRadiusTopEnd="8dp"
                    app:boxCornerRadiusTopStart="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:textColorHint="@color/icon_in_a_buttom"
                    app:startIconDrawable="@drawable/ic_lock"
                    app:startIconTintMode="multiply"
                    app:endIconContentDescription="@string/password"
                    app:helperTextTextColor="@color/date_time"
                    app:endIconDrawable="@drawable/ic_lock"
                    app:endIconTintMode="multiply"
                    app:endIconTint="@color/colorPrimary"
                    app:endIconMode="password_toggle"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_et"
                        android:textColor="@color/colorPrimary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType= "textPassword"/>

                </com.google.android.material.textfield.TextInputLayout>
                <ProgressBar
                    android:id="@+id/progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="gone"
                    />
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/forgetpassword_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/do_you_forget_password"
                    android:textColor="@color/colorAccent"
                    android:gravity="right"
                    android:layout_marginTop="8dp"
                    style="@style/TextAppearance.MaterialComponents.Subtitle2"
                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/login_bt"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/log_in"
                    android:layout_gravity="center"
                    android:layout_margin="25dp"
                    android:background="@color/logo"
                    android:textSize="20sp"
                    />

                <com.google.android.material.circularreveal.CircularRevealLinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    >

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Do not have acount? "
                        android:textColor="@color/colorOnSecondary"
                        style="@style/TextAppearance.MaterialComponents.Subtitle2"
                        />
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/createnew_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="  Create new "
                        android:textColor="@color/colorAccent"
                        style="@style/TextAppearance.MaterialComponents.Subtitle2"
                        android:onClick="@{() -> navigate.goToCreateNew()}"
                        />

                </com.google.android.material.circularreveal.CircularRevealLinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/skip_bt"
                    android:layout_width="250dp"
                    android:layout_height="60dp"
                    android:text="@string/skip"
                    android:layout_gravity="center"
                    android:layout_margin="25dp"
                    android:backgroundTint="@color/date_time"
                    android:textColor="@color/colorOnSecondary"
                    android:textSize="20sp"
                    />

            </com.google.android.material.circularreveal.CircularRevealLinearLayout>
        </ScrollView>

    </FrameLayout>
</layout>