<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="navigate"
            type="com.example.murmuro.ui.auth.vervication.MobileNumber" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.auth.vervication.MobileNumber">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <com.google.android.material.circularreveal.CircularRevealLinearLayout
                android:orientation="vertical"
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_back"
                    android:layout_marginBottom="25dp"
                    android:layout_gravity="left"
                    android:onClick="@{() -> navigate.back()}"
                    />
                <com.google.android.material.circularreveal.CircularRevealLinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="110dp"
                    >
                    <View
                        android:layout_width="5dp"
                        android:layout_height="match_parent"
                        android:background="@color/colorAccent"
                        />
                    <com.google.android.material.circularreveal.CircularRevealLinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        >
                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/phone_number"
                            android:textColor="@color/colorPrimaryVariant"
                            android:textSize="25sp"
                            android:textStyle="bold"
                            style="@style/MaterialAlertDialog.MaterialComponents.Title.Panel"
                            />

                        <com.google.android.material.textview.MaterialTextView
                            style="@style/MaterialAlertDialog.MaterialComponents.Title.Panel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/enter_phone_number_to_receive_identity_code"
                            android:textColor="@color/colorPrimaryVariant"
                            android:textSize="15sp"
                            android:layout_marginBottom="5dp"
                            />

                    </com.google.android.material.circularreveal.CircularRevealLinearLayout>

                </com.google.android.material.circularreveal.CircularRevealLinearLayout>


                <com.hbb20.CountryCodePicker
                    android:id="@+id/ccp"
                    android:layout_marginTop="50dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:ccp_showFullName="true"
                    app:ccp_defaultNameCode="EG"
                    app:ccp_showPhoneCode="true"
                    app:ccp_showNameCode="true"/>


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:errorTextColor="@color/colorError"
                    android:layout_marginTop="50dp"
                    app:boxCornerRadiusBottomEnd="8dp"
                    app:boxCornerRadiusBottomStart="8dp"
                    app:boxCornerRadiusTopEnd="8dp"
                    app:boxCornerRadiusTopStart="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone"
                    android:textColorHint="@color/icon_in_a_buttom"
                    app:startIconDrawable="@drawable/ic_phone"
                    app:startIconTintMode="multiply"
                    app:endIconContentDescription="@string/phone_number"
                    app:helperTextTextColor="@color/date_time"
                    app:counterEnabled="true"
                    app:counterTextColor="@color/colorAccent"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/mobile_et"
                        android:textColor="@color/colorPrimary"
                        android:layout_width="match_parent"
                        android:phoneNumber="true"
                        android:layout_height="wrap_content"
                        android:inputType= "phone"

                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/confirm_bt"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/confirm"
                    android:layout_gravity="center"
                    android:layout_margin="25dp"
                    android:backgroundTint="@color/date_time"
                    android:textColor="@color/colorOnSecondary"
                    android:textSize="20sp"
                    android:onClick="@{() -> navigate.Confirm()}"
                    />

            </com.google.android.material.circularreveal.CircularRevealLinearLayout>
        </ScrollView>

    </FrameLayout>
</layout>