<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="navigate"
            type="com.example.murmuro.ui.auth.vervication.confirmation.Confirmation" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.auth.vervication.confirmation.Confirmation">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <com.google.android.material.circularreveal.CircularRevealLinearLayout
                android:orientation="vertical"
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_back"
                    android:layout_marginBottom="25dp"
                    android:layout_gravity="left"
                    android:onClick="@{() -> navigate.Back()}"
                    />
                <com.google.android.material.circularreveal.CircularRevealLinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    >
                    <View
                        android:layout_width="5dp"
                        android:layout_height="match_parent"
                        android:background="@color/cardview_dark_background"
                        />
                    <com.google.android.material.circularreveal.CircularRevealLinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        >
                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/phone_confirmation"
                            android:textColor="@color/colorPrimaryVariant"
                            android:textSize="25sp"
                            android:textStyle="bold"
                            style="@style/MaterialAlertDialog.MaterialComponents.Title.Panel"
                            />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/number_txt"
                            style="@style/MaterialAlertDialog.MaterialComponents.Title.Panel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/we_send_confirmation_code_in_small_messege_on_0123456789"
                            android:textColor="@color/colorPrimaryVariant"
                            android:textSize="15sp"
                            />

                    </com.google.android.material.circularreveal.CircularRevealLinearLayout>

                </com.google.android.material.circularreveal.CircularRevealLinearLayout>

                <com.google.android.material.circularreveal.CircularRevealLinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    >
                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        app:errorTextColor="@color/colorError"
                        android:layout_marginTop="50dp"
                        app:boxCornerRadiusBottomEnd="8dp"
                        app:boxCornerRadiusBottomStart="8dp"
                        app:boxCornerRadiusTopEnd="8dp"
                        app:boxCornerRadiusTopStart="8dp"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        app:boxBackgroundMode="filled"
                        android:layout_margin="16dp"
                        >
                        <com.google.android.material.textfield.TextInputEditText
                            android:textColor="@color/colorPrimary"
                            android:layout_width="match_parent"
                            android:phoneNumber="true"
                            android:layout_height="wrap_content"
                            android:inputType= "phone"
                            android:maxLength="1"
                            />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        app:errorTextColor="@color/colorError"
                        android:layout_marginTop="50dp"
                        app:boxCornerRadiusBottomEnd="8dp"
                        app:boxCornerRadiusBottomStart="8dp"
                        app:boxCornerRadiusTopEnd="8dp"
                        app:boxCornerRadiusTopStart="8dp"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        app:boxBackgroundMode="filled"
                        android:layout_margin="16dp"
                        >
                        <com.google.android.material.textfield.TextInputEditText
                            android:textColor="@color/colorPrimary"
                            android:layout_width="match_parent"
                            android:phoneNumber="true"
                            android:layout_height="wrap_content"
                            android:inputType= "phone"
                            android:maxLength="1"
                            />

                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        app:errorTextColor="@color/colorError"
                        android:layout_marginTop="50dp"
                        app:boxCornerRadiusBottomEnd="8dp"
                        app:boxCornerRadiusBottomStart="8dp"
                        app:boxCornerRadiusTopEnd="8dp"
                        app:boxCornerRadiusTopStart="8dp"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        app:boxBackgroundMode="filled"
                        android:layout_margin="16dp"
                        >
                        <com.google.android.material.textfield.TextInputEditText
                            android:textColor="@color/colorPrimary"
                            android:layout_width="match_parent"
                            android:phoneNumber="true"
                            android:layout_height="wrap_content"
                            android:inputType= "phone"
                            android:maxLength="1"
                            />

                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        app:errorTextColor="@color/colorError"
                        android:layout_marginTop="50dp"
                        app:boxCornerRadiusBottomEnd="8dp"
                        app:boxCornerRadiusBottomStart="8dp"
                        app:boxCornerRadiusTopEnd="8dp"
                        app:boxCornerRadiusTopStart="8dp"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        app:boxBackgroundMode="filled"
                        android:layout_margin="16dp"
                        >
                        <com.google.android.material.textfield.TextInputEditText
                            android:textColor="@color/colorPrimary"
                            android:layout_width="match_parent"
                            android:phoneNumber="true"
                            android:layout_height="wrap_content"
                            android:inputType= "phone"
                            android:maxLength="1"
                            />

                    </com.google.android.material.textfield.TextInputLayout>


                </com.google.android.material.circularreveal.CircularRevealLinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/confirm_bt"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/confirm"
                    android:layout_gravity="center"
                    android:layout_margin="25dp"
                    android:backgroundTint="@color/date_time"
                    android:textColor="@color/colorOnSecondary"
                    android:textSize="20sp"
                    android:enabled="false"
                    />

                <com.google.android.material.circularreveal.CircularRevealLinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/timer_tx"
                        style="@style/MaterialAlertDialog.MaterialComponents.Title.Panel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wait_we_will_resend_code_agian_after"
                        android:textColor="@color/colorOnSecondary"
                        android:textSize="15sp"
                        android:layout_marginBottom="5dp"
                        android:textStyle="bold"
                        />


                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/resend_tx"
                        style="@style/MaterialAlertDialog.MaterialComponents.Title.Panel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Resnd!"
                        android:textColor="@color/colorError"
                        android:textSize="15sp"
                        android:layout_marginBottom="5dp"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:visibility="gone"
                        />


                </com.google.android.material.circularreveal.CircularRevealLinearLayout>

                <ProgressBar
                    android:id="@+id/progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="gone"
                    />

            </com.google.android.material.circularreveal.CircularRevealLinearLayout>
        </ScrollView>

    </FrameLayout>
</layout>